some cosmetic changes

--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,67 +1,67 @@
 <a id="logo" href="{{ .Site.BaseURL }}">
-  <svg
-   xmlns:dc="http://purl.org/dc/elements/1.1/"
-   xmlns:cc="http://creativecommons.org/ns#"
-   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-   xmlns:svg="http://www.w3.org/2000/svg"
-   xmlns="http://www.w3.org/2000/svg"
-   xmlns:xlink="http://www.w3.org/1999/xlink"
-   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-   width="52.916668mm"
-   height="17.638887mm"
-   viewBox="0 0 52.916668 17.638887"
-   version="1.1"
-   id="svg8"
-   inkscape:version="1.0.2-2 (e86c870879, 2021-01-15)"
-   sodipodi:docname="çizim.svg">
-  <defs
-     id="defs2" />
-  <sodipodi:namedview
-     id="base"
-     pagecolor="#ffffff"
-     bordercolor="#666666"
-     borderopacity="1.0"
-     inkscape:pageopacity="0.0"
-     inkscape:pageshadow="2"
-     inkscape:zoom="1.4"
-     inkscape:cx="100.70203"
-     inkscape:cy="177.09846"
-     inkscape:document-units="mm"
-     inkscape:current-layer="layer1"
-     inkscape:document-rotation="0"
-     showgrid="false"
-     inkscape:window-width="2382"
-     inkscape:window-height="1266"
-     inkscape:window-x="2682"
-     inkscape:window-y="53"
-     inkscape:window-maximized="0" />
-  <metadata
-     id="metadata5">
-    <rdf:RDF>
-      <cc:Work
-         rdf:about="">
-        <dc:format>image/svg+xml</dc:format>
-        <dc:type
-           rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-        <dc:title></dc:title>
-      </cc:Work>
-    </rdf:RDF>
-  </metadata>
-  <g
-     inkscape:label="Katman 1"
-     inkscape:groupmode="layer"
-     id="layer1"
-     transform="translate(-105.22857,-89.504761)">
-    <image
-       height="17.638887"
-       preserveAspectRatio="none"
-       width="52.916668"
-       xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAANgAAABICAYAAACURjuuAAAAAXNSR0IB2cksfwAAAAlwSFlzAAAL EwAACxMBAJqcGAAAEFVJREFUeJztXQ1sHMUVjihC0IAiilAKQhWiFCGqKso49tm+sx07Tuw4jn9i O8aJ7diJSZzUNjiuk8YE7IDzQ/4dEhzj4yc0pDQg1NJWFKEKVSkI0QghBEKoQihCIISqqgqlFChM 57udjcd7c/t3e9717TzpkxJ7d97+vG/fm/fejOfMUaJEiRIlSpQoUaLEO4mfeG4+QyvDYYbfMbzG cD4LMOT3s1USQmGG9z2GGMNWhr8xfMFAsxBn/X7WSkImzOh+wFDG8CrDfwNAAkUwJbNfmLFdxvAT htMMnwTA+BXBlGSPMGMjDKcYPg+A4SuCKckO4Z4L5PosAAavCKYkuySuhYWnAmDsimBKskviWkID c64whYWKYEoyL3EtFY9sYVgSGopgSmZO4lqd69UAGLkimJLsk7hWRM72OpcimBJ/JK51aPht4H5D EUyJ9xLXeguztf1JEUyJvxLXGnf9Nu4gQBFMifcS17ri/TbuIEARTIn3EteWnPht3EGAIpgS7yWu refy27iDAEUwJd5LXFts6LdxBwGOCEZyci5j+CnDSoYYwzzD7y9n+BFDDkOTATczzHWoby7DbQxR yXjQcQvDlU7GdKD7WobbGZZJdEf5fXqum98znlWZRO8yfk3X2hjneoZiDsvjHVxbOb8W2MFl0gMV wVwTDEb3GMO/GF5nqBZ+B4OrYhhjeJmBGnCCoYXhKht6QNQIQw/DKYY3JONBxwRDB0Ouk/uw0H0d 172d4TTDBYnuN/h9QvcCpx+OFHrn8rG6+bN6X6L3Ar+m7dzAU+rlz+5tjiYPrg8f11yGv/NrgR38 WHqwU4Id2jtJO9o30cH+YTpx7Dd+k8JPgi0QXvxXDE/wn+dywv1DYhQicO4CCx0/YziYwrBl+Ibh Q4aNDPOd3I9Br/51fsGhbtzTGXxg0tA9D8+Sj/WNTd3v8nNuSTHmu8Kxb7q9NmG8GxhGGb7Vx2Qo lR7shGAnx56hGzf00Uh+Aa2sqKYPjY77TQo/CYaw7APhxZ3lRvm8TaN4DwQyGf82PtY/bY4nAtd1 lOE6h7aj6x5gOM8/HE51f8mNPeZCL8i1g+HfLvTiHHi0JA/Ofvai4fpSPneb1xnjpNLHxHu6Wnqw E4LBa5WVLb10U6sbW+n+3Sf9JkZQCPYxB/59kWihE8Kb9Qy1BlRbkAshjeg5/sPwDsM+hrVE8BBE 83LwWE8RzXuJpEDoWOzgnm5kuFdivH9leJihmaGSH4vwsZL/7EWu+1vhHITOdzNcb1P3NQzPcAJQ PtZ7nDTTnhf7dwF/DpMGQwc+ZbjDMDbCdTHMxLOal3wVtp/TaWEseNmClAc7IdiGjp/TgoLopZvB v/t7h/wmRlAIJn5JxxkWM1zu4uXdSJLnHPCODcQkkUC0r/8WTgbx3MfsXAc75iqizWdEYoMk54jF vI5fM3Sf5x8D/XyM1WXzvheSqTmN/sHCvC6lF8bz4CQ3Pq9Bw3E3ES3UFkO6SjvXJdE5z/CMLpi9 F9sEmzz+bMJj5SxaNM2g4NEQOgaAIEEgGL6ew6YP3PrlHTSM+ZyZkUnGQGj5tnD+l6Zf2DmXEinL +PWL94Ikww0OdY8Yrh9EsZyTEc2zfyXofoDhCpt6kWX8vaCzz/B7JCUQ1n0kPBN8tBx7MaJ5TvH+ 9pieYJdgjz58ljasakmKfXMW5dL7d+z3mxxBIBhChcMkxUTb5pjV3AuIIV6Zi3F6DGTZZ0Z69rtb iRZu6V94JGgQ3jpOaXNvZsx0brE4B56oSzgeH4haBzrhfZHtHOPXnURo9rP5DH8RdMBbLnR4b3oC RrzOZaYn2SUYsObOTpqbm5dEsuWVK+kD9x3xmyB+Ewxhx61OxjCMdy2ZntJ3bADCWPM4yfT5DOZv DSbHDxve6X1mhLShH5nUV+wShhNsvUBwhHztbvWb6MEH7C3hukDGm22eCy+I+eknghfssfSCTgjW fdc9NBotSiJYfkEhbW+9i46PnWH4NX3kyNP05LFZFzamS7A/kjRqQERLVrzHx0Ko9LzlyzMfD190 fa7wGcOIybFeZ9mMBMdcDt5dXozVzsFc6qJw/Hg6z9PkuiYdeaCpc/EBRBiqlw7w7nMsT3RCsN3D Y7RqeU0SwYDCaIzW1a6m9Qy1NY10VV0zXduynm7euDWRaUSIGQASZZJgabVaGQwM3mt9muOhVnOO TGXkXpAZLNFCJzEtfi4dvcK4KP6K9Sd4tJQZRaIV518Xjkd5AqUGzwrnXM9Cg+2esnke5nl6bRMf DmQSLRsFHBFs/OiZhKeSEUyG3LwIjcWKac3KBtq5bjM9uOfRIBPNN4KR5BDpNWKRmLAx5hVES3vr X1yQLSlhITG4iXT0CuMijf9ng7e43eJ6B8j0DB0MGlnRPqIlKdJux+LPWkwCYa5qGinwj9AIcRPC OiEYcOzAk7SoqMQ2yYyEq69bnegGiZ941lOCIMuJ0PThQ0/R44d/RU+yUHUWEQzeZo+bZ+oA0jki 0dL/4nFtbu9DMvYkmQoTQZyIjXNyOQG+THEfuvfA/AlpfPQXOiqo4x6JFobqY4LYKUsZXI94/Kht ZU4JBnS2b6aRSIHrl72ubaNnBeoTR04nEiw7Bkdpz+ZtbJ7YnwhL+3vvpcNDB7geW2T2k2AIj8Z8 Ili74bi0e/WEsQ8KhglPYavoTbSUPVquPjQhmugZUb9D07F1yDbnktcW552YW6XM/hInhWWjMI/k mGAwXiQ23L7sPObJEDYe3jfpkljP0rEDTyTIVM/meghDF0mymyiEly+poFs2DXCvGVqCXeBGmGSA ROsCCRTB+Lnoh4Q3W8kN/GUTssHoUW9DIuU2G2MjTGwSrg2hKEoZSV6MvxvRe70pOy6lMAM8v23r LmawT9oy7sP74rRi2YqkgrNTRCL5CY9znIV0Tgm2c/te2tzYmiAW6nBWuhDSNje1M5I9aubNghQi 4iV2keQlGm6BIvKNKXQbCZapEBEEiLoc53b+vOv5/YBwr5DkZmAQ5YzNMW8lU21WmFthjnqT5Dhj CG1eWJYMkChsooG3cVUL7WVGj2whvvgn2FwGiY2j+x+nD95/hLat7aIxl/MvGeDJ4F3sEuvgngna 1dnjWl9xSSnt3bI9iAQzJjnwTsrdjudQt5FgXiU5kBJ/SRjXNMnhUge8CzorjK1SaBi2TIjwZ663 Z4Gs6FyZK/x+IZnKxAJIGt1hNqZMidg5kPBMSMWvbelMGH8fM8iO9m5aWbmShWHW3sIpKipWWC57 QQIDyZXWlvW0sDCWlr7S0nJ65KHHA0UwPp6YpkdI12d9VvoiIZgvafo0dXUbSPaKHSJwgp4VzsNc bAH/nbvCskTJeZKGwXqBe7ftNSXYKPOoTSwkzM1Lnme5AepzR/c/ETSC3UG0jgv9a4qvv+s1XQ70 GgnmS6E5TX1oleoQ9OG9bLR5brPh3of5z9EgDO+lRxXuPHAQCNbc1JaY28nIdezgqUThGiGsV/qK ixEqbkt4xgARDEb5ApmaV+DLifVljjvyHeo1EgzwulUKnqzZy+uW6BQLwXh2O2yeN58YkhiS8ewX liUKfCcYEhXLllbRocHddP/oeCK1vmvnIbqubVOCDJnQWbK4jO4eGRNJ5ivB+JgFBsNE2GNruYdk LKyvut6KoCkIBsPC+i833eayZt9Bi3Ng5F3ciLudflSIthoACRC9IwVd8/0Ozh8m0zOU+L/YnY+C uTuvHgSC6Vi8eAltbFiTCAfLl1amnak0A+aTPZsHE3W0ABEMyY4dhmtNhCZOjI5o4WYPNxTTzF0K ggH6eizbYSqRL1dBet40dU60wq/e/Q9vguKx7T5Eom34I5Y50NBbbX3mpfONK5TfJ24Ly5LBA0Ow TMAsKbJkSUXCUwaFYHxctBidM1wrXj7qNNJUu3AuPAHmFJjL6aGm6R4UEoKJuuHJMBe0WnAJvShY o5dQXHAJ0vTYuGdjFwuSPEjxg7BWHhi60Rgt9lPiXNvel2g1N3hQWZ0NP3O9BCmrCYayw7atI7Rq ea309yhO93QPBopgfGzUesQw61tu7Og+GCTaaun5wvG1nCgwtHcN9/m+hS4jwbDMX+zVA1HRD4jG W9SEFvPzxC0DsJLAuEkNDH6YWHwU+Fio0xk/KsioIjQ7we8P9zyXH7+Q/wzP4iyZTi4QwnGJg0zf xEgE+kLdz4NJlhIMy2p27TycIA/aqFIlSbAim8/DAkMwPj7mMuNEvi2BFWx3NhBJJwfXDeP9iNjf 2UkEkjXNTgwzzfsFvuK27LpQTrSdosTdwOCBW9yOpw864wRDJ8iKqtqM1NV0IDmye+RYgmBYcZ2q QI55HjKVLggm3bbNSyFa+AMCIOSzu9MSjnuJE8SyCVZGMP5zZDX7ieZFrPoBdSC0Q0uTq4SAcL9v Eett70QgawgviqxrOmvyGshUqQRwXliWDDqjBIMnQcvS6PDRjGUIgfz8QkashxKtUQN3329aQ/vl wINuCJZy41GvhWhJC/TkwSOdlhi8uAknjnOSmDDtRSSaZ2njul+WGP6n/DmgKItFnmnvnEu0uRfS 5NiXA5utykK3jzkBMH+LObnnFDqRiUTvpL5NHt4rvHl6S2RmmmAgFbwKlpbsGNxNV9XdmRE98Eyt azYkWrzQEGx2LNqvXBDMdOtsr4XrQ/ETGUW9Jy9pG2nisJhrRTB+zJVcN8LiaoNubImGvj5XezBa XNt8gWzG/krM//Dhsb0pj4UuY2E5rS0gxIFnPET8xT3DdO+u4xRNxggXZ1q/EXW1TfTAnolQ/vEH OwTLdiFaFhH1N7HIb6tQbWfwGSdYUdHixHIVeDM73fCZRmVlNTZVVQQLL8Ewn/amsCwZPCuziE6A Anfb2i5FsPASDKUJcV5rus2c08FDTzCk9FdW1yuChZdgxl213BeWJYOHnmAoF+QXFCqChZBgRCtg i/fvyXo4UYEiGJsHRiL5imAhIxjRsqNi72T6hWWJktATLJJf8L8lZUuf9vTBzhIJOcHKDfZve6df J0pCT7DCaOyLmupVj3j6YGeJhJVgJFOFZYmi0BMsGi16Z13bpkZPH+wsETJ92zZM8Ov9vqaZEKIV sPV96lH/Qv+k980CimA5NBYr+UPflu0/9PzhzgIh2iJPfL3RwYCu+bR2FJ4tQrQukaf4vaPBODN7 oCiC5WCR50hGHu4sEDL1t8HQ6IrWI29DpAAL0fosce/YtNTTPzQhKgk1wfIiEdq1vsf0j5ErUeJa wkywvLzIdyuq6kKZnlcyQxJmgpWWln9YV9NU4/c7UJLFElaCFRbGPmdzrw1bNg5c4/c7UJLFEkaC FRREv65aXvunjvbuUGYOlcyghI1gBYXRr+vrmgf2jBwLTbZMiY8SJoJFo0UXq1fUvTg6fPT7fj93 JSGRMBAsEsn/rry84oM7V7d3dnX2Zny/dyVKLkm2E4yFhN/V1jSeaWxYU3VP79DVfj9vJSGT3Ny8 83mRfDqbgZ2qQKRYrPjr4uLSiyXFpW+WL6n4bUfbpqGtfTvT23ZLiZJ0pKSkbIhhYjajtLR8oqJi xXhdbdNY65oNw/29Q5WH9k5mdJcnJUqUKFGiRImS7JL/A5seL+8ggoWuAAAAAElFTkSuQmCC"
-       id="image10"
-       x="105.22857"
-       y="89.504761" />
-  </g>
-</svg>
+   <svg
+      xmlns:dc="http://purl.org/dc/elements/1.1/"
+      xmlns:cc="http://creativecommons.org/ns#"
+      xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+      xmlns:svg="http://www.w3.org/2000/svg"
+      xmlns="http://www.w3.org/2000/svg"
+      id="svg2041"
+      version="1.1"
+      viewBox="0 0 158.3392 36.283741"
+      height="36.283741px"
+      width="158.3392px">
+     <defs
+        id="defs2035" />
+     <metadata
+        id="metadata2038">
+       <rdf:RDF>
+         <cc:Work
+            rdf:about="">
+           <dc:format>image/svg+xml</dc:format>
+           <dc:type
+              rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+           <dc:title></dc:title>
+         </cc:Work>
+       </rdf:RDF>
+     </metadata>
+     <g
+        transform="translate(-27.579505,-104.43311)"
+        id="layer1">
+       <g
+          transform="matrix(0.14148987,0,0,-0.14148987,-179.39125,557.57004)"
+          id="g1172">
+         <g
+            id="g1120"
+            transform="matrix(0.56650355,0,0,0.56650355,1691.2149,3202.6104)"
+            style="fill:#9d93ac">
+           <path
+              d="m 0,0 v -298.128 c 0,-2.024 -0.062,-4.031 -0.175,-6.029 -3.12,-55.24 -48.895,-99.061 -104.906,-99.061 h -298.128 v 298.128 c 0,58.045 47.045,105.09 105.081,105.09 z"
+              style="fill:#9d93ac;fill-opacity:1;fill-rule:nonzero;stroke:none"
+              id="path1118" />
+         </g>
+         <g
+            id="g1124"
+            transform="matrix(0.56650355,0,0,0.56650355,1494.2521,3084.7141)"
+            style="fill:#333333">
+           <path
+              d="m 0,0 c -2.147,-0.202 -4.268,-0.395 -6.45,-0.368 -5.408,0.088 -10.71,1.096 -15.925,2.507 -10.192,2.725 -20.061,6.765 -29.596,11.594 l -3.532,1.876 V -194.3 h 298.128 c 56.012,0 101.786,43.821 104.906,99.061 -0.123,2.138 -0.289,4.172 -0.517,6.082 -2.419,19.938 -7.02,39.5 -15.013,57.974 -8.098,18.703 -20.272,37.835 -38.334,48.229 -15.802,9.106 -34.548,9.693 -51.673,4.128 C 233.16,18.291 224.667,14.119 217.112,8.711 209.883,3.532 203.976,-2.883 197.35,-8.738 188.139,-16.862 173.993,-26.915 161.058,-22.208 151.917,-18.86 147,-9.684 142.96,-1.463 138.517,7.59 132.811,16.108 125.493,23.111 108.324,39.526 82.558,46.756 59.114,42.523 58.29,43.978 57.405,45.424 56.581,46.879 53.233,52.725 49.903,58.57 46.555,64.416 43.409,69.929 40.253,75.441 37.09,80.98 35.381,83.951 33.724,88.088 30.578,89.858 19.895,95.888 15.039,80.288 13.471,72.909 11.525,63.715 11.954,54.127 14.794,45.153 17.073,37.949 20.657,31.227 25.153,25.17 26.52,23.339 27.958,21.533 29.482,19.833 22.787,10.859 12.486,3.493 2.007,0.438 1.611,0.323 0,0 0,0 m 286.479,-63.399 c -4.953,0 -8.966,6.678 -8.966,14.934 0,8.247 4.013,14.933 8.966,14.933 4.942,0 8.956,-6.686 8.956,-14.933 0,-8.256 -4.014,-14.934 -8.956,-14.934 M 129.18,-71.331 c -6.187,0 -11.209,5.013 -11.209,11.201 0,6.187 5.022,11.2 11.209,11.2 0.333,0 0.684,-0.008 1.026,-0.044 -0.386,-0.902 -0.587,-1.901 -0.587,-2.944 0,-4.295 3.479,-7.791 7.773,-7.791 1.052,0 2.051,0.209 2.962,0.586 0.027,-0.324 0.036,-0.666 0.036,-1.007 0,-6.188 -5.014,-11.201 -11.21,-11.201"
+              style="fill:#333333;fill-opacity:1;fill-rule:nonzero;stroke:none"
+              id="path1122" />
+         </g>
+         <text
+            xml:space="preserve"
+            style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:284.24755859px;line-height:0;font-family:'URW Gothic';-inkscape-font-specification:'URW Gothic';letter-spacing:0px;word-spacing:0px;fill:#000000;fill-opacity:1;stroke:none;stroke-width:7.10618877"
+            x="1720.4202"
+            y="-3012.4072"
+            id="text1128"
+            transform="scale(1,-1)"><tspan
+              id="tspan1126"
+              x="1720.4202"
+              y="-3012.4072"
+              style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-family:Comfortaa;-inkscape-font-specification:Comfortaa;letter-spacing:15px;word-spacing:0px;stroke-width:7.10618877"
+              dx="0">repsy</tspan></text>
+       </g>
+     </g>
+   </svg>
 </a>
 
