--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,67 +1,31 @@
-<a id="logo" href="{{ .Site.BaseURL }}">
-   <svg
-      xmlns:dc="http://purl.org/dc/elements/1.1/"
-      xmlns:cc="http://creativecommons.org/ns#"
-      xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-      xmlns:svg="http://www.w3.org/2000/svg"
-      xmlns="http://www.w3.org/2000/svg"
-      id="svg2041"
-      version="1.1"
-      viewBox="0 0 158.3392 36.283741"
-      height="42.468px"
-      width="185.327px">
-     <defs
-        id="defs2035" />
-     <metadata
-        id="metadata2038">
-       <rdf:RDF>
-         <cc:Work
-            rdf:about="">
-           <dc:format>image/svg+xml</dc:format>
-           <dc:type
-              rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-           <dc:title></dc:title>
-         </cc:Work>
-       </rdf:RDF>
-     </metadata>
-     <g
-        transform="translate(-27.579505,-104.43311)"
-        id="layer1">
-       <g
-          transform="matrix(0.14148987,0,0,-0.14148987,-179.39125,557.57004)"
-          id="g1172">
-         <g
-            id="g1120"
-            transform="matrix(0.56650355,0,0,0.56650355,1691.2149,3202.6104)"
-            style="fill:#9d93ac">
-           <path
-              d="m 0,0 v -298.128 c 0,-2.024 -0.062,-4.031 -0.175,-6.029 -3.12,-55.24 -48.895,-99.061 -104.906,-99.061 h -298.128 v 298.128 c 0,58.045 47.045,105.09 105.081,105.09 z"
-              style="fill:#9d93ac;fill-opacity:1;fill-rule:nonzero;stroke:none"
-              id="path1118" />
-         </g>
-         <g
-            id="g1124"
-            transform="matrix(0.56650355,0,0,0.56650355,1494.2521,3084.7141)"
-            style="fill:#333333">
-           <path
-              d="m 0,0 c -2.147,-0.202 -4.268,-0.395 -6.45,-0.368 -5.408,0.088 -10.71,1.096 -15.925,2.507 -10.192,2.725 -20.061,6.765 -29.596,11.594 l -3.532,1.876 V -194.3 h 298.128 c 56.012,0 101.786,43.821 104.906,99.061 -0.123,2.138 -0.289,4.172 -0.517,6.082 -2.419,19.938 -7.02,39.5 -15.013,57.974 -8.098,18.703 -20.272,37.835 -38.334,48.229 -15.802,9.106 -34.548,9.693 -51.673,4.128 C 233.16,18.291 224.667,14.119 217.112,8.711 209.883,3.532 203.976,-2.883 197.35,-8.738 188.139,-16.862 173.993,-26.915 161.058,-22.208 151.917,-18.86 147,-9.684 142.96,-1.463 138.517,7.59 132.811,16.108 125.493,23.111 108.324,39.526 82.558,46.756 59.114,42.523 58.29,43.978 57.405,45.424 56.581,46.879 53.233,52.725 49.903,58.57 46.555,64.416 43.409,69.929 40.253,75.441 37.09,80.98 35.381,83.951 33.724,88.088 30.578,89.858 19.895,95.888 15.039,80.288 13.471,72.909 11.525,63.715 11.954,54.127 14.794,45.153 17.073,37.949 20.657,31.227 25.153,25.17 26.52,23.339 27.958,21.533 29.482,19.833 22.787,10.859 12.486,3.493 2.007,0.438 1.611,0.323 0,0 0,0 m 286.479,-63.399 c -4.953,0 -8.966,6.678 -8.966,14.934 0,8.247 4.013,14.933 8.966,14.933 4.942,0 8.956,-6.686 8.956,-14.933 0,-8.256 -4.014,-14.934 -8.956,-14.934 M 129.18,-71.331 c -6.187,0 -11.209,5.013 -11.209,11.201 0,6.187 5.022,11.2 11.209,11.2 0.333,0 0.684,-0.008 1.026,-0.044 -0.386,-0.902 -0.587,-1.901 -0.587,-2.944 0,-4.295 3.479,-7.791 7.773,-7.791 1.052,0 2.051,0.209 2.962,0.586 0.027,-0.324 0.036,-0.666 0.036,-1.007 0,-6.188 -5.014,-11.201 -11.21,-11.201"
-              style="fill:#333333;fill-opacity:1;fill-rule:nonzero;stroke:none"
-              id="path1122" />
-         </g>
-         <text
-            xml:space="preserve"
-            style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:284.24755859px;line-height:0;font-family:'URW Gothic';-inkscape-font-specification:'URW Gothic';letter-spacing:0px;word-spacing:0px;fill:#000000;fill-opacity:1;stroke:none;stroke-width:7.10618877"
-            x="1720.4202"
-            y="-3012.4072"
-            id="text1128"
-            transform="scale(1,-1)"><tspan
-              id="tspan1126"
-              x="1720.4202"
-              y="-3012.4072"
-              style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-family:Comfortaa;-inkscape-font-specification:Comfortaa;letter-spacing:15px;word-spacing:0px;stroke-width:7.10618877"
-              dx="0">repsy</tspan></text>
-       </g>
-     </g>
-   </svg>
-</a>
+<svg id="RepsyLogo" 
+xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 60.80" 
+width="280" height="60">
+  <defs>
+    
+    <style>
+      .cls-1 {
+        fill: #ff69b4;
+      }
 
+      .cls-2 {
+        fill: #fcc0e0;
+      }
+
+      .cls-3 {
+        fill: #fff;
+      }
+
+      .cls-4 {
+        fill: #ff44a0;
+      }
+    </style>
+  </defs>
+  <path class="cls-3" d="M89.18,17.6c-.9-.56-2.26-.84-4.07-.84-1.94,0-3.72.46-5.33,1.38-1.17.67-2.18,1.52-3.01,2.54v-1.41c0-.73-.19-1.27-.57-1.65-.38-.38-.95-.57-1.7-.57-.69,0-1.23.2-1.63.59s-.59.94-.59,1.63v22.56c0,.73.2,1.27.59,1.65.4.38.94.57,1.63.57.76,0,1.32-.2,1.7-.59.38-.4.57-.94.57-1.63v-14.56c0-1.51.46-2.8,1.38-3.85.92-1.05,2.17-1.79,3.75-2.22,1.58-.43,3.37-.48,5.38-.15.46.07.89.09,1.28.07.4-.01.74-.13,1.04-.34.3-.21.49-.57.59-1.06.23-.86-.11-1.56-1.01-2.12h0ZM112.11,18.56c-1.84-1.14-4.03-1.7-6.57-1.7s-4.89.58-6.86,1.75c-1.97,1.17-3.52,2.78-4.64,4.84-1.12,2.06-1.68,4.43-1.68,7.13s.59,5.03,1.78,7.08,2.82,3.67,4.91,4.84c2.09,1.17,4.5,1.75,7.23,1.75,1.51,0,3.1-.29,4.76-.86s3.05-1.31,4.17-2.2c.49-.4.73-.86.69-1.41-.03-.54-.3-1.04-.79-1.51-.4-.33-.86-.49-1.38-.47s-1.02.21-1.48.57c-.66.53-1.56.99-2.69,1.38s-2.23.59-3.28.59c-1.94,0-3.65-.43-5.11-1.28s-2.62-2.02-3.45-3.48c-.6-1.05-.99-2.21-1.16-3.48h19.2c.62,0,1.13-.19,1.51-.57.38-.38.57-.85.57-1.41,0-2.6-.49-4.89-1.48-6.89-.99-1.99-2.4-3.56-4.25-4.69h0ZM100.68,22.04c1.36-.86,2.99-1.28,4.86-1.28,1.71,0,3.17.4,4.39,1.19s2.15,1.88,2.82,3.26c.47.99.78,2.08.93,3.26h-17.05c.17-1.04.47-2.02.92-2.91.73-1.48,1.77-2.65,3.13-3.5h0ZM144.86,18.66c-2.06-1.2-4.39-1.8-6.98-1.8s-4.87.59-6.91,1.78-3.66,2.82-4.86,4.89c-1.2,2.08-1.82,4.39-1.85,6.96v22.86c0,.66.21,1.2.64,1.63.43.43.97.64,1.63.64.69,0,1.24-.21,1.65-.64s.62-.97.62-1.63v-13.82c1.15,1.45,2.57,2.6,4.25,3.45s3.56,1.28,5.63,1.28c2.43,0,4.62-.59,6.57-1.78s3.48-2.82,4.62-4.89c1.14-2.08,1.7-4.41,1.7-7.01s-.6-4.98-1.8-7.04c-1.2-2.06-2.83-3.69-4.89-4.89h0ZM145.9,35.49c-.81,1.47-1.91,2.62-3.31,3.45-1.4.84-2.97,1.26-4.71,1.26s-3.32-.42-4.71-1.26c-1.4-.84-2.49-1.99-3.28-3.45-.79-1.47-1.19-3.1-1.19-4.91s.4-3.49,1.19-4.94c.79-1.45,1.88-2.6,3.28-3.45,1.4-.86,2.97-1.28,4.71-1.28s3.32.42,4.71,1.26c1.4.84,2.5,1.99,3.31,3.45.81,1.47,1.21,3.12,1.21,4.96s-.4,3.45-1.21,4.91h0ZM175.32,30.18c-1.43-.76-3.38-1.36-5.85-1.83-1.78-.33-3.14-.7-4.1-1.11s-1.6-.86-1.95-1.36c-.34-.49-.52-1.07-.52-1.73,0-1.02.52-1.83,1.56-2.42s2.34-.89,3.93-.89c1.32,0,2.48.17,3.48.52,1,.34,1.92.95,2.74,1.8.43.46.96.74,1.6.84s1.21,0,1.7-.3c.49-.36.77-.81.82-1.33s-.14-1.04-.57-1.53c-.99-1.25-2.3-2.23-3.95-2.94-1.65-.71-3.56-1.06-5.73-1.06-1.71,0-3.33.27-4.86.82-1.53.54-2.76,1.36-3.7,2.47-.94,1.1-1.41,2.49-1.41,4.17,0,1.88.76,3.47,2.27,4.79,1.51,1.32,3.93,2.29,7.26,2.91,2.57.43,4.36,1.01,5.38,1.75s1.53,1.65,1.53,2.74c-.03,1.05-.57,1.93-1.6,2.64-1.04.71-2.62,1.06-4.76,1.06-1.51,0-2.91-.26-4.17-.79s-2.23-1.15-2.89-1.88c-.4-.46-.89-.73-1.48-.79-.59-.07-1.17.12-1.73.54-.53.43-.82.94-.89,1.53-.07.59.12,1.14.54,1.63,1.12,1.19,2.65,2.12,4.59,2.79,1.94.68,4,1.01,6.17,1.01s4.15-.34,5.73-1.04,2.79-1.64,3.63-2.84c.84-1.2,1.26-2.56,1.26-4.07,0-1.28-.31-2.43-.94-3.45-.62-1.02-1.65-1.91-3.08-2.67h0ZM206.59,17.25c-1.28-.53-2.22-.16-2.82,1.08l-8.42,18.85-9.3-18.9c-.27-.59-.65-.98-1.16-1.16-.51-.18-1.05-.14-1.6.12-.59.23-.99.61-1.21,1.14s-.17,1.07.12,1.63l11.09,21.78-4.92,11c-.59,1.28-.23,2.22,1.09,2.82.4.16.74.25,1.04.25.79,0,1.38-.46,1.78-1.38l15.45-34.41c.59-1.32.21-2.25-1.14-2.82h0Z"/>
+  <path class="cls-4" d="M27.44,34.79c-1.93,1-12.97,1.22-17.17-7.36-.03-.08-.07-.16-.1-.25,0,0,6.85,8.03,18.45,4.28,7.23,11.9,23.05,5.77,25.35-5.19.42,13.43-18.22,20.6-26.53,8.51ZM48.74,25.05s-1.17-4.54-6.46-2.88c.02-.25.09-.5.22-.72,1.56-2.72,7.8.89,6.24,3.6h0Z"/>
+  <path class="cls-4" d="M39.62,50.85c-.67.52-3.52,2.09-3.85,2.2-4.72-1.48-9.7-6.14-11.37-10.82-8.3,1.92-15.96-6.71-15.37-14.15,1.84,7.25,9.72,12.84,17.25,10.43,0,0,.93,2.31,1.02,2.51.47,1,1.06,1.99,1.68,2.89.85,1.24,1.81,2.34,2.96,3.32,1.87,1.58,4.11,2.81,6.5,3.39.17.04.34.08.52.12.22.04.43.08.65.12ZM30.42,15.64s-1.17-4.54-6.46-2.88c.64-3.96,8.18-.09,6.46,2.88Z"/>
+  <path class="cls-2" d="M53.33,22.35c-3.33-5.02-12.05-4.82-16.65-3.43-.91-7.54-9.09-12.49-15.61-12.79,7.13-.91,14.64,3.02,17.37,9.84,5.97-.25,12.39-1.21,14.86,6.29.01.03.02.07.03.1h0Z"/>
+  <path class="cls-4" d="M13.07,8.84s-.66-.4-.93-.64C9.43,6.02,9.99.59,13.63.02h0c1.15-.11,2.21.26,3.08.92-5.81,1.37-3.72,7.67-3.64,7.9Z"/>
+  <path class="cls-2" d="M33.06,54.22C6.55,64.21-12.89,26.62,10.41,10.48c.06-.04.12-.08.18-.12.07-.05.15-.1.22-.15C-6.07,28.14,5.92,57.15,33.07,54.22h0Z"/>
+  <path class="cls-1" d="M53.33,22.35c-3.33-5.02-12.05-4.82-16.65-3.43-.91-7.54-9.09-12.49-15.61-12.79-.82.1-1.63.27-2.44.5.66-2.06-.26-4.41-1.92-5.68-5.81,1.37-3.72,7.67-3.64,7.9-.8.44-1.55.9-2.26,1.38C-6.07,28.15,5.91,57.16,33.06,54.23c.89-.34,1.8-.73,2.71-1.17-4.7-1.47-9.68-6.14-11.37-10.82-8.3,1.92-15.97-6.72-15.39-14.16-.45-1.78-.55-3.66-.18-5.55.25,1.89.76,3.51,1.44,4.91-.03-.08-.07-.16-.1-.25,0,0,6.85,8.03,18.45,4.28,7.23,11.9,23.05,5.77,25.35-5.19-.04-1.26-.24-2.57-.64-3.93h0ZM30.42,15.64c-1.34,2.45-6.86-.3-6.46-2.88.64-3.96,8.18-.09,6.46,2.88ZM48.74,25.05c-1.33,2.45-6.86-.3-6.46-2.88.02-.25.09-.5.22-.72,1.56-2.72,7.8.89,6.24,3.6h0Z"/>
+</svg>
